updated styling and header menu

--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <script src="./main.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="grid-container" id="grid-container">
+        <div class="grid-header">Header
+            <ul class="header-menu" id="header-menu">
+                <li><a href="about.html">om mig</a></li>
+                <li><a href="projects.html">projekt</a></li>
+                <li><a href="contact.html">kontakt</a></li>
+                <li><a href="experience.html">erfarenhet</a></li>
+            </ul>
+        </div>
+        <div class="grid-main">Main</div>  
+        <div class="grid-footer">Footer</div>
+      </div>
 </body>
 </html>
