Added scroll back to top function

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="logo align-items justify-content" id="logo"></div>
                 <div id="soc-icons" class="soc-icons">
                     <a href="https://github.com/amandasamuelsson" target="_blank" class="fab fa-github-square"></a>
-                    <a href="https://linkedin.com/in/amanda-samuelsson-85b4261b5" class="fab fa-linkedin"></a>
+                    <a href="https://linkedin.com/in/amanda-samuelsson-85b4261b5" target="_blank" class="fab fa-linkedin"></a>
                 </div>
             </div>
             <!-- Header menu -->
@@ -46,6 +46,7 @@
                 <img src="./images/spring.jpg" alt="">
                 <img src="./images/summer.jpg" alt="">
             </div>
+            <button onclick="topFunction()" id="topBTN" title="Go to top"><i class="fas fa-chevron-up"></i></button>
             <!-- Content -->
             <!-- <div id="content" class="content"> -->
                 <div id="about" class="about">  
