Added responsive CSS

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Header -->
         <div class="grid-header">
             <div class="header-group">
-                <div class="logo align-items justify-content" id="logo"></div>
+               <div class="logo"> <img src="./images/logo.png" class="logoimg" alt="White logotype saying Amanda Samuelsson"></div>
                 <div id="soc-icons" class="soc-icons">
                     <a href="https://github.com/amandasamuelsson" target="_blank" class="fab fa-github-square"></a>
                     <a href="https://linkedin.com/in/amanda-samuelsson-85b4261b5" target="_blank" class="fab fa-linkedin"></a>
