--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
             <!-- </div> -->
         </div>  
         <!-- Footer -->
-        <div class="grid-footer">Footer</div>
+        <div class="grid-footer">
+
+            ©2020 Amanda Samuelsson
+        </div>
       </div>
 </body>
 </html>
