Updated content and slideshow

--- a/index.html
+++ b/index.html
@@ -31,33 +31,38 @@
                 </button>
    
                 <ul class="header-menu align-items justiy-content" id="header-menu">
+                    <li><a href="#experience">erfarenhet</a></li>
                     <li><a href="#about">om mig</a></li>
                     <li><a href="#projects">projekt</a></li>
-                    <li><a href="#experience">erfarenhet</a></li>
                     <li><a href="#contact">kontakt</a></li>
                 </ul>
             </nav>
         </div>
         <div class="grid-main">Main
-            <!-- Slideshow -->
-            <div id="slideShow" class="slideshow-container">
-                <img class="show" src="./images/autumn.jpg" alt="">
-                <img src="./images/winter.jpg" alt="">
-                <img src="./images/spring.jpg" alt="">
-                <img src="./images/summer.jpg" alt="">
-            </div>
+           
             <button onclick="topFunction()" id="topBTN" title="Go to top"><i class="fas fa-chevron-up"></i></button>
             <!-- Content -->
             <!-- <div id="content" class="content"> -->
+                <div id="experience" class="experience">  
+                    <h2>Erfarenheter</h2>
+                </div>
                 <div id="about" class="about">  
+                    <h2>Om mig</h2>
+                            <!-- Slideshow -->
+                    <div id="slideShow" class="slideshow-container">
+                        <img class="show" src="./images/postcard1.jpg" alt="">
+                        <img src="./images/dj-bild-1.JPG" alt="">
+                        <!-- <img src="./images/spring.jpg" alt="">
+                        <img src="./images/summer.jpg" alt=""> -->
+                    </div>
                 </div>
                 <div id="projects" class="projects">  
+                    <h2>Projekt</h2>
                 </div>
-                <div id="experience" class="experience">  
-                </div>
+                
                 <div id="contact" class="contact">  
+                    <h2>Kontakt</h2>
                 </div>
-            <!-- </div> -->
         </div>  
         <!-- Footer -->
         <div class="grid-footer">
