--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
                                 Våren 2019 gjorde jag tillsammans med en klasskamrat ett projektarbete i form av en hemsida. Hemsidan är för vandrarhemmet Cent-Rum som ligger i centrala Borås. I nära kontakt med uppdragsgivaren som valt att behålla den grafiska profilen från tidigare då det var en inarbetad profil. Hemsidan förnyades till dagens standarder och gjordes responsiv. Under arbetet fick vi använda alla de verktyg vi fått under våra två första år på utbildningen i form av  HTML, CSS, Javascript, grafisk design, juridik med mera. 
                                 Hemsidan är byggd med hjälp av Wordpress där vi även gjort ändringar i koden samt använt oss av plug-in-verktyget Elementor.
                             </p>
+                            <a href="http://cent-rum.se/"  target="_blank">
+                                <img src="./images/centrum.png" alt="">
+                            </a>
+
                             <h3>Examensarbete</h3>    
                             <p>
                                 Under våren 2020 skrev jag tillsammans med min klasskamrat vårt examensabete om Netflix navigationssystem. 
@@ -120,13 +124,19 @@
                         
                         <div id="contact" class="contact">  
                             <h2>Kontakt</h2>
+                            <p>
+                                För att komma i kontakt med mig får du mer än gärna skicka iväg ett mail till mig. <a class="link" href = "mailto: amanda.e.samuelsson@hotmail.com">Skicka mail!</a>
+                            </p>
+                            <p>
+                                Vill du se mer av mitt arbete kan du kika in på min <a class="link" href = "https://github.com/amandasamuelsson" target="_blank" >Github</a>.
+                            </p>
                         </div>
                     </div>  
                 </div>
                     <!-- Footer -->
         <div class="grid-footer">
 
-            ©2020 Amanda Samuelsson
+           <p>©2020 Amanda Samuelsson</p> 
         </div>
       </div>
 </body>
