--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">    <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="./slider.css">
-    <link rel="stylesheet" href="./responsive.css">
+    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="./CSS/slider.css">
+    <link rel="stylesheet" href="./CSS/responsive.css">
     <script defer src="./main.js"></script>
     <script src="./smooth-scroll.js"></script>
-    <title>Portfolio</title>
+    <title>Amanda Samuelsson Portfolio</title>
 </head>
-<body>
+<body>  
     <div class="grid-container" id="grid-container">
         <!-- Header -->
         <div class="grid-header">
@@ -94,7 +94,7 @@
                         </p>
                     </div>
                     <!-- About -->
-                    <div id="about" class="about">  
+                    <div id="about" class="about">
                         <h2>Om mig</h2>
                         <div class="about-box">
                             <p class="about-text">
