--- a/index.html
+++ b/index.html
@@ -98,12 +98,15 @@
                         <h2>Om mig</h2>
                         <div class="about-box">
                             <p class="about-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quisquam ratione dolore, nostrum, harum iste necessitatibus dolorum eligendi reiciendis veniam molestias error tempore aliquam numquam ab nemo. Corporis, pariatur architecto?
+                                Jag är 27 år och bor i Borås. I juni 2020 tog jag examen från Högskolan i Borås där jag läste till Webbredaktör. Under utbildningen har jag lärt webbutveckling, UX-design, sökmotoroptimering, textproduktion och mycket mer. Efter min examen bestämde jag mig för att vidareutbilda mig för att lära mig mer om webbutveckling. Jag började därför under hösten 2020 läsa på Medieinstitutet där jag nu läser till Front End Developer. 
+                                Utöver studier jobbar jag varannan helg i djuraffären Arken Zoo i Borås och även som e-handelsassistent för Secondhand.se som är Erikshjälpens e-handel. Jag jobbar även som volontär för Tjejjouren Magnolia, där chattar jag med personer som behöver stöd. Jag har även hjälpt Magnolia med att ta fram grafiskt material som flyers och annonser. 
+                                På fritiden umgås jag med vänner, lyssnar på musik - så väl live som inspelad och reser. 
                             </p>
                             <!-- Slideshow -->
                             <div id="slideShow" class="slideshow-container">
-                                <img class="show" src="./images/postcard1.jpg" alt="">
-                                <img src="./images/dj-bild-1.JPG" alt="">
+                                <img class="show" src="./images/postcard1.jpg" alt="A picture showing different post cards with pictures of different views">
+                                <img src="./images/dj-bild-1.JPG" alt="Picture of two girls in white shirts">
+                                <img src="./images/concert1.jpg" alt="Picture of a concert at dusk">
                             </div>
                         </div>
                         </div>
@@ -117,7 +120,7 @@
                                 Hemsidan är byggd med hjälp av Wordpress där vi även gjort ändringar i koden samt använt oss av plug-in-verktyget Elementor.
                             </p>
                             <a href="http://cent-rum.se/"  target="_blank">
-                                <img src="./images/centrum.png" alt="">
+                                <img src="./images/centrum.png" alt="Printscreen from a website for a hostel">
                             </a>
 
                             <h3>Examensarbete</h3>    
